
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {int op; scalar_t__ res; } ;
typedef TYPE_2__ nfs_resop4 ;
struct TYPE_7__ {scalar_t__ status; TYPE_1__* verf; } ;
typedef TYPE_3__ nfs41_commit_res ;
typedef int bool_t ;
typedef int XDR ;
struct TYPE_5__ {scalar_t__ verf; } ;


 int FALSE ;
 scalar_t__ NFS4_OK ;
 int NFS4_VERIFIER_SIZE ;
 int OP_COMMIT ;
 int TRUE ;
 scalar_t__ unexpected_op (int ,int ) ;
 int xdr_opaque (int *,char*,int ) ;
 int xdr_u_int32_t (int *,scalar_t__*) ;

__attribute__((used)) static bool_t decode_op_commit(
    XDR *xdr,
    nfs_resop4 *resop)
{
    nfs41_commit_res *res = (nfs41_commit_res*)resop->res;

    if (unexpected_op(resop->op, OP_COMMIT))
        return FALSE;

    if (!xdr_u_int32_t(xdr, &res->status))
        return FALSE;

    if (res->status == NFS4_OK)
        return xdr_opaque(xdr, (char *)res->verf->verf, NFS4_VERIFIER_SIZE);

    return TRUE;
}
